# mylisp

./: README.md
cpp/: CMakeLists.txt  main.cpp
cpp/res/: test.lisp
cpp/src/: Test1.cpp  Test1.hpp  VoidLisp.cpp  VoidLisp.hpp
csharpLisp/: VoidLisp.cs
jsLisp/: VoidLisp.js  VoidLisp.ts  inde.js  lisp.ts  lispRun.js  test.js  test.lisp  test.ts
learnClisp/: test.lisp
